[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/MenuItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/PlayerInfo.gd" type="Script" id=2]
[ext_resource path="res://GUI/art/Player_GUI.png" type="Texture" id=3]
[ext_resource path="res://art/font/Joystix_large.tres" type="DynamicFont" id=4]
[ext_resource path="res://GUI/AttributeEntry.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/PowerEntryLeft.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/PowerEntryRight.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource_name = "Intro"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, -366.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:margin_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 366.0, -6.0 ]
}

[node name="PlayerInfo" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
focused = false

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 177.0
margin_right = 366.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Close" type="Button" parent="Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 15.0
margin_right = 69.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Title" type="Label" parent="Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 18.0
margin_right = 248.0
margin_bottom = 56.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Player"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AttributesContainer" type="VBoxContainer" parent="Background" index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -285.0
margin_top = 120.0
margin_right = -21.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Vitality" parent="Background/AttributesContainer" index="0" instance=ExtResource( 5 )]

margin_left = 3.0
margin_top = 3.0
margin_right = 261.0
margin_bottom = 51.0

[node name="Strength" parent="Background/AttributesContainer" index="1" instance=ExtResource( 5 )]

margin_left = 3.0
margin_top = 55.0
margin_right = 261.0
margin_bottom = 103.0
Name = "Strength"

[node name="Agility" parent="Background/AttributesContainer" index="2" instance=ExtResource( 5 )]

margin_left = 3.0
margin_top = 107.0
margin_right = 261.0
margin_bottom = 155.0
Name = "Agility"

[node name="Wisdom" parent="Background/AttributesContainer" index="3" instance=ExtResource( 5 )]

margin_left = 3.0
margin_top = 159.0
margin_right = 261.0
margin_bottom = 207.0
Name = "Wisdom"

[node name="PowersContainer" type="Container" parent="Background" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 378.0
margin_right = 339.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Left" type="Container" parent="Background/PowersContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
_sections_unfolded = [ "Rect" ]

[node name="HP" parent="Background/PowersContainer/Left" index="0" instance=ExtResource( 6 )]

Name = "Health"

[node name="Stamina" parent="Background/PowersContainer/Left" index="1" instance=ExtResource( 6 )]

margin_top = 30.0
margin_bottom = 60.0
Name = "Stamina"

[node name="Weight" parent="Background/PowersContainer/Left" index="2" instance=ExtResource( 6 )]

margin_top = 60.0
margin_bottom = 90.0
Name = "Weight"

[node name="XP_Gain" parent="Background/PowersContainer/Left" index="3" instance=ExtResource( 6 )]

margin_top = 91.0
margin_bottom = 121.0
Name = "XP Gain"

[node name="Right" type="Container" parent="Background/PowersContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 138.0
margin_right = 267.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Attack" parent="Background/PowersContainer/Right" index="0" instance=ExtResource( 7 )]

Value = 10
Name = "Attack"

[node name="Slash" parent="Background/PowersContainer/Right" index="1" instance=ExtResource( 7 )]

margin_top = 30.0
margin_bottom = 60.0
Value = 10
Name = "Slash"

[node name="Impact" parent="Background/PowersContainer/Right" index="2" instance=ExtResource( 7 )]

margin_top = 60.0
margin_bottom = 90.0
Value = 10
Name = "Impact"

[node name="Thrust" parent="Background/PowersContainer/Right" index="3" instance=ExtResource( 7 )]

margin_top = 90.0
margin_bottom = 120.0
Value = 10
Name = "Thurst"

[node name="Animation" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Intro = SubResource( 1 )
blend_times = [  ]

[connection signal="finished_interaction" from="." to="." method="_on_PlayerInfo_finished_interaction"]

[connection signal="pressed" from="Background/Close" to="." method="_on_Close_pressed"]

[connection signal="finished_interaction" from="Background/AttributesContainer/Vitality" to="." method="_on_Attribute_finished_interaction"]

[connection signal="finished_interaction" from="Background/AttributesContainer/Strength" to="." method="_on_Attribute_finished_interaction"]

[connection signal="finished_interaction" from="Background/AttributesContainer/Agility" to="." method="_on_Attribute_finished_interaction"]

[connection signal="finished_interaction" from="Background/AttributesContainer/Wisdom" to="." method="_on_Attribute_finished_interaction"]


